daily_news.log
Traceback (most recent call last):
  File "D:\OneDrive - 경상남도교육청\바탕 화면\진해고등학교\2026학년도\antigravity_folder\run_news_once.py", line 5, in <module>
    import daily_news
  File "D:\OneDrive - 경상남도교육청\바탕 화면\진해고등학교\2026학년도\antigravity_folder\daily_news.py", line 202
    today_str_full = now.strftime("%Y??%m??%d??)
                                  ^
SyntaxError: unterminated string literal (detected at line 202)
[2026-04-23 15:15:07] 🚀 데일리 경제 뉴스 자동 생성 시작 (2026년 04월 23일)
[2026-04-23 15:15:33] 텔레그램 알림 전송 완료!
실행 완료.
